--- a/lohost/lohost.API/website/styles/app.css
+++ b/lohost/lohost.API/website/styles/app.css
@@ -53,13 +53,19 @@ h2 {
     font-size: 20px;
     font-weight: bold;
     text-align: center;
-    max-width: 400px;
+    max-width: 500px;
     margin: 0px auto;
     margin-bottom: 40px;
 }
 
 h3 {
     font-size: 18px;
+    font-weight: bold;
+    margin: 0px 0px 20px 0px;
+}
+
+h4 {
+    font-size: 15px;
     font-weight: bold;
     margin: 0px 0px 20px 0px;
 }
@@ -98,4 +104,9 @@ a:hover {
 
 .group {
     margin-bottom: 35px;
+}
+
+.site-name {
+    font-size: 18px;
+    font-weight: bold;
 }
